--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </b>
   
             <b>
-              <li><a href="#">Destination</a></li>
+              <li><a href="https://tafa234.github.io/RAHHAL_dest/">Destination</a></li>
             </b>
             <b>
               <li><a href="#">Tours</a></li>
@@ -209,7 +209,7 @@
                 <br />
                 <a href=""><p>About Us</p></a> 
                 <br />
-                <a href=""><p>Destination</p></a>  
+                <a href="https://tafa234.github.io/RAHHAL_dest/"><p>Destination</p></a>  
                 <br />
             
             </ul>
