--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a href="#">Reviews</a></li>
             </b>
             <b>
-              <li><a href="https://tafa234.github.io/contact/">Contacts</a></li>
+              <li><a href="https://tafa234.github.io/contacts/">Contacts</a></li>
             </b>
           </ul>
         <div class="search">
