--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     <header>
         <img class="logo" class="logo" src="RAHHAL logo2.png" width="300" height="160" />
         <ul class="font">
-            <b>
-              <li><a href="index.html">Home</a></li>
-            </b>
-  
-            <b>
-              <li><a href="#">About Us</a></li>
-            </b>
-  
-            <b>
-              <li><a href="https://tafa234.github.io/RAHHAL_dest/">Destination</a></li>
-            </b>
-            <b>
-              <li><a href="#">Tours</a></li>
-            </b>
-            <b>
-              <li><a href="#">Hotels</a></li>
-            </b>
-            <b>
-              <li><a href="#">Reviews</a></li>
-            </b>
-            <b>
-              <li><a href="https://tafa234.github.io/contacts/">Contacts</a></li>
-            </b>
-          </ul>
+          <b>
+            <li><a href="https://tafa234.github.io/RAHHAL/">Home</a></li>
+          </b>
+
+          <b>
+            <li><a href="https://tafa234.github.io/About_us/">About Us</a></li>
+          </b>
+
+          <b>
+            <li><a href="https://tafa234.github.io/RAHHAL_dest/">Destination</a></li>
+          </b>
+          <b>
+            <li><a href="https://mariam-massah.github.io/tours/">Tours</a></li>
+          </b>
+          <b>
+            <li><a href="https://shahd-ahssen.github.io/Hotel-Home/">Hotels</a></li>
+          </b>
+          <b>
+            <li><a href="https://shahd-ahssen.github.io/Review/">Reviews</a></li>
+          </b>
+          <b>
+            <li><a href="https://tafa234.github.io/contacts/">Contacts</a></li>
+          </b>
+        </ul>
         <div class="search">
             <input type="text" placeholder="Search Here..." />
             <button class="button"> <img src="magnifying-blue.png" alt="icon"> </button>
